# CMAKE_DEFINES

./: .gitignore  CMAKE_DEFINES.code-workspace  CMakeLists.txt  LICENSE  cmake.info.in  main.cpp
